// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "style" prop 1`] = `
.emotion-0:empty {
  display: none;
}

.emotion-3 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-columns: minmax(0,1fr);
  grid-auto-rows: minmax(min-content,max-content);
  gap: 1rem;
  justify-items: stretch;
  color: red;
}

<div>
  <div
    class="emotion-3"
  >
    <div
      class="emotion-0"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0:empty {
  display: none;
}

.emotion-4 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-columns: minmax(0,1fr);
  grid-auto-rows: minmax(min-content,max-content);
  gap: 1rem;
  justify-items: stretch;
}

<div>
  <div
    class="emotion-4"
  >
    <div
      class="emotion-0"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        2
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="emotion-0"
    >
      456
    </div>
  </div>
</div>
`;

exports[`should render only valid children 1`] = `
.emotion-0:empty {
  display: none;
}

.emotion-2 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-columns: minmax(0,1fr);
  grid-auto-rows: minmax(min-content,max-content);
  gap: 1rem;
  justify-items: stretch;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      <span>
        testing vflow
      </span>
    </div>
    <div
      class="emotion-0"
    >
      <span>
        testing vflow
      </span>
    </div>
  </div>
</div>
`;
